<resources>
    <string name="app_name">Eazylo</string>
    <string name="action_settings">Settings</string>


    <!-- Common strings -->
    <string name="enable_location">Please enable location in settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="no_network_connection">Sorry! It appears that we are offline. Content and images may not display until we reconnect to the Internet.</string>
    <string name="digit_token_error_message">An error occurred while either fetching the token, Please try again</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token, sending the fetched token to the server or subscribing to the PubSub topic. Please try running the sample again.</string>
    <string name="update_app_msg">New Version available now! \n please update new version.</string>
    <string name="lbl_app_update">App Update</string>
    <string name="btn_not_now">Not Now</string>
    <string name="btn_update">Update</string>
    <string name="crop_image">Crop Image</string>
    <string name="bullet">\u2022</string>
    <string name="bullet_big">\u26AB</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="menu_crop">Crop</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_no">No</string>
    <string name="lbl_call">Call</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_crop_image">Crop Image</string>
    <string name="lbl_no_internet">Internet connection is not available</string>
    <string name="lbl_no_records_available">No records available</string>
    <string name="alert_delete_message">Are you sure want to delete?</string>
    <string name="alert_call_message">Are you sure want to call?</string>
    <string name="lbl_minus">&#8211;</string>
    <string name="lbl_plus">&#43;</string>
    <string name="toast_exit_msg">Press again to exit</string>
    <string name="lbl_open_camera">Open Camera</string>
    <string name="lbl_open_gallery">Open Gallery</string>
    <string name="lbl_menu">Menu</string>
    <string name="alert_logout_message">Are you sure you want to logout?</string>
    <string name="lbl_no_data">No data found</string>
    <string name="dialog_title_limit">Selection Limit</string>
    <string name="dialog_message_limit">You can only select 3 options!</string>

    <!-- Define all Font Names -->
    <string name="regular">fonts/sf_ui_regular.otf</string>
    <string name="semi_bold">fonts/sf_ui_semibold.otf</string>

    <string name="permission_denied_message"><![CDATA[If you reject permission, you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>

    <string name="search_hint_name">Search</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="lbl_post_paid">Postpaid</string>
    <string name="hint_amount">Amount</string>
    <string name="lbl_recharge_now">Recharge Now</string>
    <string name="lbl_pre_paid">Prepaid</string>
    <string name="hint_account_number">Account Number</string>
    <string name="hint_std_number">STD Number</string>
    <string name="hint_number_wihout_std">Number Without STD</string>

    <!--Menu Fragment-->
    <string name="lbl_back">Back</string>

    <!--Login-->

    <string name="hint_email">Email ID/Contact Number</string>
    <string name="hint_email_register">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="lbl_login">Login Securely</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_register_user">Register</string>
    <string name="title_login_user">Login</string>
    <string name="lbl_register">Create a New Account</string>

    <!--Error message-->

    <string name="erorr_first_name">Please enter first name</string>
    <string name="erorr_contact_number">Please enter contact number</string>
    <string name="error_email_address">Please enter email address</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="lbl_category">Catogary</string>

    <string name="lbl_base_catagary">Base Catagary</string>
    <string name="hint_base_catagary">private</string>

    <string name="hint_lable">Select Catagry</string>
    <string name="class_prompt">Choose a Class</string>

    <string name="text_general"><u>General</u></string>

    <string-array name="select_operator">
        <item>Select Operator</item>
        <item>Airtel</item>
        <item>Vodafone</item>
        <item>BSNL Topup</item>
        <item>BSNL STV</item>
        <item>Jio</item>
        <item>Reliance GSM</item>
        <item>Aircel</item>
        <item>Idea</item>
        <item>Tata Indicom</item>
        <item>Loop Mobile</item>
        <item>Tata Docomo</item>
        <item>Tata Docomo Special</item>
        <item>Virgin CDMA</item>
        <item>Virgin GSM</item>
        <item>MTS</item>
        <item>Telenor</item>
        <item>Telenor Special</item>
        <item>Videocon</item>
        <item>Videocon Special</item>
        <item>MTNL Topup</item>
        <item>MTNL STV</item>
        <item>T24</item>
        <item>T24 Special</item>
        <item>Empire Calls</item>
        <item>Empire Calls ACT</item>
    </string-array>

    <string-array name="select_circle">

        <item>Select Circle</item>
        <item>Andhra Pradesh</item>
        <item>Assam</item>
        <item>Bihar Jharkhand</item>
        <item>Chennai</item>
        <item>Delhi</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu  Kashmir</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Kolkata</item>
        <item>Maharashtra</item>
        <item>Madhya Pradesh  Chhattisgarh</item>
        <item>Mumbai</item>
        <item>North East</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Tamil Nadu</item>
        <item>Uttar Pradesh – East</item>
        <item>West Bengal</item>
        <item>Uttar Pradesh – West</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
