<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mukeshproject.ui.activities.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_15">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/hint_first_name"
            android:imeOptions="actionNext"
            android:padding="@dimen/margin_10" />

        <TextView
            android:id="@+id/tvErorrFirstName"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/erorr_first_name"
            android:visibility="gone" />

        <EditText
            android:imeOptions="actionNext"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_10" />

        <TextView
            android:id="@id/tvErorrEmail"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_email_address"
            android:visibility="gone" />

        <EditText
            android:imeOptions="actionNext"
            android:inputType="number"
            android:id="@+id/etContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/hint_contact_number"
            android:padding="@dimen/margin_10" />

        <TextView
            android:id="@+id/tvErorrContactNumber"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/erorr_contact_number"
            android:visibility="gone" />

        <EditText
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/hint_password"
            android:padding="@dimen/margin_10" />

        <TextView
            android:id="@+id/tvErorrPassword"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password_empty"
            android:visibility="gone" />

        <EditText
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:layout_marginTop="@dimen/margin_10"
            android:id="@+id/etConfirmPassword"
            android:background="@drawable/rounded_border_edittext"
            android:padding="@dimen/margin_10"
            android:hint="@string/hint_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="@dimen/margin_15"
            android:id="@+id/btnRegister"
            android:text="@string/lbl_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
