<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mukeshproject.ui.activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvErorrEmail"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_email_address"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvErorrPassword"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password_empty"
            android:visibility="gone" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/lbl_login" />

        <Button
            android:id="@+id/btnForgotPassword"
            android:text="@string/lbl_forgot_password"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
