<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/margin_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <RadioGroup
                android:id="@+id/rgRechargeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_pirates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/lbl_pre_paid" />

                <RadioButton
                    android:id="@+id/radio_ninjas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_post_paid" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:drawablePadding="@dimen/margin_5"
                        android:hint="@string/hint_mobile_number"
                        android:inputType="phone"
                        android:maxLength="13" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/imContactShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:background="@color/colorWhite"
                    android:src="@drawable/ic_contacts"
                    android:text="Button" />
            </RelativeLayout>

            <Spinner
                android:id="@+id/spOperatorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_8"
                android:entries="@array/select_operator" />

            <Spinner
                android:id="@+id/spCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_8"
                android:entries="@array/select_circle" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:hint="@string/hint_amount"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnRechargeNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/margin_40"
                android:layout_marginRight="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/margin_15"
                android:text="@string/lbl_recharge_now"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>